# bitcoin-key-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: BitcoinKeyUtilsConfig.cmake.in
examples/: demo.cpp
include/: bitcoin_key_utils.h
include/config/: bitcoin-config.h
scripts/: update_bitcoin_core.sh
src/: bitcoin_key_utils.cpp
tests/: CMakeLists.txt  doctest_my_lib.cpp
